RISC-V: fix typos in macroAssembler_riscv.cpp

XMLWordPrintable

    • b19
    • riscv
    • linux

      1. `// Look up the method for a megamorpic invkkeinterface call.` should be `// Look up the method for a megamorphic invokeinterface call.`
      2. `recv_klass can be destroyed when mehtid isn't needed` should be `recv_klass can be destroyed when method isn't needed"`
      3. `caller must be same register for non-constant itable index as for method` should be `caller must use same register for non-constant itable index as for method`
      4. extra empty line at the end of generate_method_handle_dispatch

            Assignee:
            Sendao Yan
            Reporter:
            Sendao Yan
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: