8337713: RISC-V: fix typos in macroAssembler_riscv.cpp

Reviewed-by: jwaters, fyang